UIP-4015 Critical schema forms changes

--- a/packages/schema-form/stories/Validation.stories.mdx
+++ b/packages/schema-form/stories/Validation.stories.mdx
@@ -9,7 +9,7 @@ import * as stories from './Validation.stories.js';
 ## Form Props
 
 
-### `Validate`
+### `validate`
 
 
 To add custom validation, utilize the Form's validate prop to trigger a validation function.
@@ -18,7 +18,7 @@ The below example uses the following:
 
 ```html
 function validate(formData, errors) {
-  if (formData.Password1 !== formData.Password) {
+  if (formData.Password1 !== formData.Password2) {
     errors.Password2.addError("Passwords don't match");
   }
   return errors;
@@ -33,4 +33,63 @@ function validate(formData, errors) {
 
 <Canvas>
   <Story story={stories.basic} />
+</Canvas>
+
+
+### `liveValidate="on"`
+
+
+To add live validation, utilize the Form's liveValidate prop to trigger real-time validation.
+The below example uses the following:
+
+
+```html
+function validate(formData, errors) {
+  if (formData.Password1 !== formData.Password2) {
+    errors.Password2.addError("Passwords don't match");
+  }
+  return errors;
+}
+
+<Form
+  schema={('Schema', schema)}
+  validate={validate}
+  liveValidate="on"
+/>
+```
+
+
+<Canvas>
+  <Story story={stories.liveOn} />
+</Canvas>
+
+
+### `liveValidate="postSubmit"`
+
+
+To add live validation ONLY AFTER the first form submission, utilize the Form's liveValidate prop
+and pass in the option `"postSubmit"`
+
+
+The below example uses the following:
+
+
+```html
+function validate(formData, errors) {
+  if (formData.Password1 !== formData.Password2) {
+    errors.Password2.addError("Passwords don't match");
+  }
+  return errors;
+}
+
+<Form
+  schema={('Schema', schema)}
+  validate={validate}
+  liveValidate="postSubmit"
+/>
+```
+
+
+<Canvas>
+  <Story story={stories.livePostSubmit} />
 </Canvas>
