UIP-3874: add Kosovo to country codes list

--- a/packages/ui-library/src/util/i18n/lang/en_us.json
+++ b/packages/ui-library/src/util/i18n/lang/en_us.json
@@ -114,6 +114,7 @@
     "kz": "Kazakhstan (Казахстан)",
     "ke": "Kenya",
     "ki": "Kiribati",
+    "xk": "Kosovo (Republika e Kosovës)",
     "kw": "Kuwait (‫الكويت‬‎)",
     "kg": "Kyrgyzstan (Кыргызстан)",
     "la": "Laos (ລາວ)",
