UIP-4243: Fixes for Astro theme in Schema Forms

--- a/packages/schema-form/stories/TextInput.stories.mdx
+++ b/packages/schema-form/stories/TextInput.stories.mdx
@@ -18,6 +18,15 @@ This allows for password validation.
   <Story story={stories.PasswordInput} />
 </Canvas>
 
+# Password text input widget w/ requirements
+Please select "see code" option and notice format, ui:widget, and inputType have been set to password.
+
+This allows for password validation with requirements.
+<Canvas>
+  <Story story={stories.PasswordWithRequirements} />
+</Canvas>
+
+
 # Email text input widget
 Please select "see code" option and notice format, ui:widget, and inputType has been set to email.
 
